--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
+
 * {
     padding: 0px;
     margin: 0px;
@@ -19,11 +21,14 @@ body {
 }
 
 .main-container {
-    width: 400px;
+    width: 370px;
     height: 600px;
     background-color: #FFF;
     margin: 20px;
     border-radius: 28px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .illustration-container {
@@ -32,4 +37,68 @@ body {
     background-image: url("images/illustration-hero.svg");
     background-size: contain;
     border-radius: 28px 28px 0 0;
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+
+    width: 100%;
+    height: 160px;
+
+    padding: 0px 14px;
+
+}
+
+.title-card {
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 900;
+    color: hsl(223, 47%, 23%);
+    padding: 20px 0px 14px 0px;
+}
+
+.subtitle-card {
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 500;
+    color: hsl(224, 23%, 55%);
+    margin: 0px 14px;
+    font-size: 16px;
+}
+
+.value-container {
+    width: 80%;
+    height: 12%;
+
+    background-color: hsl(225, 100%, 98%);
+    border-radius: 14px;
+
+    margin: 22px 0px;
+}
+
+.button-card {
+    width: 80%;
+    height: 8%;
+
+    background-color:  hsl(245, 75%, 52%);
+    border: none;
+    border-radius: 14px;
+    color: white;
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 700;
+    box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.205);
+    margin-top: 5px;
+}
+
+.text-cancel {
+    padding-top: 15px;
+    color:  hsl(224, 23%, 55%);
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 700;   
+    font-size: 14px;
+}
+
+.content-value {
+    display: flex;
 }
