--- a/style.css
+++ b/style.css
@@ -75,6 +75,10 @@ body {
     border-radius: 14px;
 
     margin: 22px 0px;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .button-card {
@@ -99,6 +103,30 @@ body {
     font-size: 14px;
 }
 
-.content-value {
-    display: flex;
+.icon-music {
+    width: 40px;
+    margin: 0px 14px;
+}
+
+.name-plan{
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.plan-container {
+    margin-right: 60px;
+}
+
+.price-plan {
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 500;
+    color:hsl(224, 23%, 55%);
+    font-size: 16px;
+}
+
+.tochange {
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 700;
+    color: hsl(245, 75%, 52%)
 }
